--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </data>
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+
+                <com.yuyakaido.android.cardstackview.CardStackView
+                    android:id="@+id/card_stack_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clipToPadding="false"
+                    android:elevation="16dp"
+                    android:layout_gravity="center|top"
+                    android:padding="4dp"
+                    android:layout_marginBottom="100dp"
+                    />
+                <TextView
+                    android:id="@+id/textView_End"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginHorizontal="32dp"
+                    android:textSize="46sp"
+                    android:elevation="0dp"
+                    android:textAlignment="center"
+                    android:fontFamily="@font/roboto"
+                    android:textColor="#000"
+                    android:textStyle="bold"
+                    android:text="You've checked all the avaliable people! You
+                    have to take a rest and to try to find someone offline 😄"
+                    />
+
+                <com.google.android.material.bottomappbar.BottomAppBar
+                    android:id="@+id/bottomAppBar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
+                    app:navigationIcon="@drawable/ic_baseline_settings_24"
+                    app:menu="@menu/bottom_app_bar"
+                    />
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:tint="@color/pink_900"
+                    app:srcCompat="@drawable/ic_baseline_chat_24"
+                    style="@style/Widget.MyApp.FloatingActionButton"
+                    app:layout_anchor="@id/bottomAppBar"
+                    />
+
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+
+
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+</layout>
