--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
                     />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/chatsbutton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:tint="@color/pink_900"
